zoom debug ready

--- a/src/components/Schedular/styles/style.css
+++ b/src/components/Schedular/styles/style.css
@@ -10,11 +10,11 @@ table {
 
 .flex-center {
   -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .steps::after {
@@ -29,3 +29,11 @@ table {
 .steps {
   position: relative;
 }
+
+.user-select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+/*# sourceMappingURL=style.css.map */
