--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
 @font-face {
   src: url("./fonts/Poppins-Regular.ttf") format("truetype");
   font-family: "Poppins";
+  font-weight: 400;
+}
+
+@font-face {
+  src: url("./fonts/Poppins-Medium.ttf") format("truetype");
+  font-family: "Poppins";
+  font-weight: 500;
+}
+
+@font-face {
+  src: url("./fonts/Poppins-SemiBold.ttf") format("truetype");
+  font-family: "Poppins";
+  font-weight: 600;
 }
 
 body {
