--- a/src/components/Schedular/styles/style.css
+++ b/src/components/Schedular/styles/style.css
@@ -74,4 +74,17 @@ table {
     opacity: 1;
   }
 }
+
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 12px solid #021a53;
+}
+
+.rc-slider-handle {
+  -webkit-transform: translateX(calc(-50% + 10px)) !important;
+          transform: translateX(calc(-50% + 10px)) !important;
+}
 /*# sourceMappingURL=style.css.map */
