--- a/src/components/Schedular/styles/style.scss
+++ b/src/components/Schedular/styles/style.scss
@@ -54,3 +54,15 @@ table {
     opacity: 1;
   }
 }
+
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 12px solid #021a53;
+}
+
+.rc-slider-handle {
+  transform: translateX(calc(-50% + 10px)) !important;
+}
