--- a/src/components/Schedular/styles/style.css
+++ b/src/components/Schedular/styles/style.css
@@ -96,6 +96,7 @@ table {
 .icon-btn {
   cursor: pointer;
   width: 28px;
+  height: 28px;
   -webkit-transition: -webkit-transform 0.1s;
   transition: -webkit-transform 0.1s;
   transition: transform 0.1s;
